--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-    background: url(../imagens/fundo-madeira.jpg) no-repeat top center  ;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat center center  ;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -33,4 +33,16 @@ section#telefone {
     height: 627px;
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
+    
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    width: 268px;
+    height: 471px;
+
+
 }
