--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,6 +43,24 @@ iframe#tela {
 
     width: 268px;
     height: 471px;
+}
 
+section#rede-sociais {
+    text-align: right;
+    
+}
 
+section#rede-sociais > a > img {
+    width: 45px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.411);
+    box-sizing: border-box;
+}
+
+section#rede-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.637);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.664);
+    transition-duration: .2s;
 }
